--- a/ui/app.html
+++ b/ui/app.html
@@ -74,6 +74,7 @@
       padding: 40px 24px;
       max-width: 1000px;
       margin: auto;
+      text-align: center;
     }
 
     h1 {
@@ -85,6 +86,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
+      margin-top: 20px;
     }
 
     .card {
@@ -170,13 +172,18 @@
   loadTheme();
 
   async function loadMe() {
-    const res = await fetch("/api/me");
-    if (!res.ok) return;
+    try {
+      const res = await fetch("/api/me");
+      if (!res.ok) return;
 
-    const data = await res.json();
+      const data = await res.json();
 
-    $("tenantBadge").textContent =
-      "Tenant: " + (data.orgName || "—");
+      $("tenantBadge").textContent =
+        "Tenant: " + (data.orgName || "—");
+
+    } catch (err) {
+      console.error("Failed to load /api/me", err);
+    }
   }
 
   loadMe();
