--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -1,12 +1,245 @@
-<main>
-  <h1>Scheduled Maintenance</h1>
+<!DOCTYPE html>
+<html data-theme="dark">
+<head>
+  <meta charset="utf-8" />
+  <title>US Signal | Webex Maintenance</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link rel="stylesheet" href="/ui/styles.css" />
+
+  <style>
+    body {
+      font-family: system-ui, -apple-system, sans-serif;
+      background: #0f172a;
+      color: #e5e7eb;
+      margin: 0;
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 18px 32px;
+      background: #111827;
+      border-bottom: 1px solid #1f2937;
+    }
+
+    header img {
+      height: 42px;
+    }
+
+    .container {
+      padding: 40px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    h1 {
+      margin-bottom: 24px;
+      font-size: 28px;
+      font-weight: 600;
+    }
+
+    .card {
+      background: #111827;
+      border-radius: 12px;
+      padding: 28px;
+      box-shadow: 0 12px 35px rgba(0,0,0,0.45);
+    }
+
+    .loading {
+      padding: 30px;
+      text-align: center;
+      opacity: 0.7;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 14px 12px;
+      border-bottom: 1px solid #1f2937;
+      text-align: left;
+      font-size: 14px;
+    }
+
+    th {
+      text-transform: uppercase;
+      font-size: 12px;
+      letter-spacing: 0.5px;
+      opacity: 0.6;
+    }
+
+    .status-operational {
+      color: #22c55e;
+      font-weight: 600;
+    }
+
+    .status-degraded {
+      color: #f59e0b;
+      font-weight: 600;
+    }
+
+    .status-major {
+      color: #ef4444;
+      font-weight: 600;
+    }
+
+    .empty {
+      padding: 30px;
+      text-align: center;
+      opacity: 0.6;
+    }
+
+    .refresh-note {
+      margin-top: 14px;
+      font-size: 12px;
+      opacity: 0.5;
+    }
+
+    .back-link {
+      margin-top: 28px;
+      display: inline-block;
+      color: #3b82f6;
+      text-decoration: none;
+    }
+
+    .back-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  <!-- ✅ Using same GitHub-hosted US Signal logo source as licenses page -->
+  <img src="https://raw.githubusercontent.com/ahmedadeyemi-cts/ussignal-webex/main/ui/logo.svg" alt="US Signal Logo">
+  <div>Webex Calling & Control Hub Status</div>
+</header>
+
+<div class="container">
+
+  <h1>Platform Maintenance & Incidents</h1>
 
   <div class="card">
-    <pre id="maintenance">Loading…</pre>
+
+    <div id="loading" class="loading">
+      Checking Webex Calling & Control Hub status...
+    </div>
+
+    <div id="emptyState" class="empty" style="display:none;">
+      No active Calling or Control Hub incidents.
+    </div>
+
+    <table id="maintenanceTable" style="display:none;">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Start</th>
+          <th>End</th>
+          <th>Type</th>
+          <th>Description</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody id="maintenanceRows"></tbody>
+    </table>
+
+    <div class="refresh-note">
+      Auto-refreshes every 60 seconds.
+    </div>
+
   </div>
 
-  <div class="card">
-    <input id="email" placeholder="your@email.com" />
-    <button>Email Schedule</button>
-  </div>
-</main>
+  <a href="/" class="back-link">← Back to Dashboard</a>
+
+</div>
+
+<script>
+async function loadMaintenance() {
+  const loading = document.getElementById("loading");
+  const table = document.getElementById("maintenanceTable");
+  const rows = document.getElementById("maintenanceRows");
+  const empty = document.getElementById("emptyState");
+
+  loading.style.display = "block";
+  table.style.display = "none";
+  empty.style.display = "none";
+  rows.innerHTML = "";
+
+  try {
+    const res = await fetch("/api/maintenance");
+    const data = await res.json();
+
+    if (!res.ok) {
+      loading.textContent = "Failed to load Webex maintenance data.";
+      return;
+    }
+
+    const incidents = data.incidents || [];
+    const maintenance = data.maintenance || [];
+
+    if (!incidents.length && !maintenance.length) {
+      loading.style.display = "none";
+      empty.style.display = "block";
+      return;
+    }
+
+    const allRows = [];
+
+    incidents.forEach(i => {
+      allRows.push(`
+        <tr>
+          <td>${new Date(i.updated_at).toLocaleDateString()}</td>
+          <td>—</td>
+          <td>—</td>
+          <td>Incident</td>
+          <td>${i.name}</td>
+          <td class="${statusClass(i.status)}">${i.status}</td>
+        </tr>
+      `);
+    });
+
+    maintenance.forEach(m => {
+      allRows.push(`
+        <tr>
+          <td>${new Date(m.start).toLocaleDateString()}</td>
+          <td>${new Date(m.start).toLocaleTimeString()}</td>
+          <td>${new Date(m.end).toLocaleTimeString()}</td>
+          <td>Maintenance</td>
+          <td>${m.name}</td>
+          <td class="${statusClass(m.status)}">${m.status}</td>
+        </tr>
+      `);
+    });
+
+    rows.innerHTML = allRows.join("");
+    loading.style.display = "none";
+    table.style.display = "table";
+
+  } catch (err) {
+    loading.textContent = "Unexpected error loading status.";
+  }
+}
+
+function statusClass(status) {
+  if (!status) return "";
+
+  const s = status.toLowerCase();
+
+  if (s.includes("operational")) return "status-operational";
+  if (s.includes("degraded")) return "status-degraded";
+  if (s.includes("major")) return "status-major";
+
+  return "";
+}
+
+loadMaintenance();
+setInterval(loadMaintenance, 60000);
+</script>
+
+</body>
+</html>
