--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -1,244 +1,268 @@
 <!DOCTYPE html>
-<html data-theme="dark">
+<html lang="en" data-theme="light">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <title>US Signal | Webex Maintenance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="/ui/styles.css" />
-
   <style>
-    body {
-      font-family: system-ui, -apple-system, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-      margin: 0;
+    html[data-theme="light"] {
+      --bg: #f9fafb;
+      --fg: #111827;
+      --card: #ffffff;
+      --border: #e5e7eb;
+      --accent: #2563eb;
+      --muted: #6b7280;
+      --danger-bg: #fee2e2;
+      --danger-fg: #991b1b;
+      --pill-bg: rgba(37, 99, 235, 0.08);
+      --pill-fg: #1d4ed8;
+      --shadow: 0 8px 22px rgba(0,0,0,0.06);
+      --rowHover: rgba(17, 24, 39, 0.04);
     }
+
+    html[data-theme="dark"] {
+      --bg: #0b1220;
+      --fg: #e5e7eb;
+      --card: #020617;
+      --border: #1f2937;
+      --accent: #3b82f6;
+      --muted: #9ca3af;
+      --danger-bg: rgba(248,113,113,0.18);
+      --danger-fg: #fecaca;
+      --pill-bg: rgba(59,130,246,0.18);
+      --pill-fg: #bfdbfe;
+      --shadow: 0 8px 22px rgba(0,0,0,0.25);
+      --rowHover: rgba(255,255,255,0.06);
+    }
+
+    * { box-sizing: border-box; font-family: system-ui; }
+
+    body { margin: 0; background: var(--bg); color: var(--fg); }
 
     header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 18px 32px;
-      background: #111827;
-      border-bottom: 1px solid #1f2937;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:16px 20px;
+      border-bottom:1px solid var(--border);
+      background:var(--card);
+      position:sticky;
+      top:0;
+      z-index:10;
     }
 
-    header img {
-      height: 42px;
+    .brand { display:flex; align-items:center; gap:14px; }
+
+    header img { height:34px; }
+
+    header h1 { margin:0; font-size:18px; font-weight:700; }
+
+    .headerRight { display:flex; gap:10px; align-items:center; }
+
+    .pill {
+      font-size:12px;
+      padding:6px 10px;
+      border:1px solid var(--border);
+      border-radius:999px;
+      background:var(--pill-bg);
+      color:var(--pill-fg);
+      font-weight:600;
     }
 
-    .container {
-      padding: 40px;
-      max-width: 1200px;
-      margin: auto;
+    button {
+      padding:8px 12px;
+      border-radius:10px;
+      border:1px solid var(--border);
+      background:var(--card);
+      cursor:pointer;
+      font-weight:600;
     }
 
-    h1 {
-      margin-bottom: 24px;
-      font-size: 28px;
-      font-weight: 600;
-    }
+    button.secondary { background:transparent; }
+
+    main { padding:24px; max-width:1200px; margin:auto; }
 
     .card {
-      background: #111827;
-      border-radius: 12px;
-      padding: 28px;
-      box-shadow: 0 12px 35px rgba(0,0,0,0.45);
-    }
-
-    .loading {
-      padding: 30px;
-      text-align: center;
-      opacity: 0.7;
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:14px;
+      padding:18px;
+      box-shadow:var(--shadow);
+      margin-bottom:18px;
     }
 
     table {
-      width: 100%;
-      border-collapse: collapse;
+      width:100%;
+      border-collapse:collapse;
+      margin-top:12px;
+      border:1px solid var(--border);
+      border-radius:12px;
     }
 
     th, td {
-      padding: 14px 12px;
-      border-bottom: 1px solid #1f2937;
-      text-align: left;
-      font-size: 14px;
+      padding:10px 12px;
+      border-bottom:1px solid var(--border);
+      font-size:13px;
     }
 
     th {
-      text-transform: uppercase;
-      font-size: 12px;
-      letter-spacing: 0.5px;
-      opacity: 0.6;
+      font-size:12px;
+      text-transform:uppercase;
+      color:var(--muted);
     }
 
-    .status-operational {
-      color: #22c55e;
-      font-weight: 600;
+    tr:hover td { background:var(--rowHover); }
+
+    .badge {
+      padding:4px 8px;
+      border-radius:999px;
+      font-size:11px;
+      font-weight:700;
     }
 
-    .status-degraded {
-      color: #f59e0b;
-      font-weight: 600;
+    .badge-incident { background:var(--danger-bg); color:var(--danger-fg); }
+    .badge-maint { background:var(--pill-bg); color:var(--pill-fg); }
+    .badge-pstn { background:#f59e0b; color:white; }
+
+    .major-banner {
+      background:var(--danger-bg);
+      color:var(--danger-fg);
+      padding:12px;
+      border-radius:10px;
+      font-weight:700;
+      display:none;
+      margin-bottom:18px;
     }
 
-    .status-major {
-      color: #ef4444;
-      font-weight: 600;
-    }
-
-    .empty {
-      padding: 30px;
-      text-align: center;
-      opacity: 0.6;
-    }
-
-    .refresh-note {
-      margin-top: 14px;
-      font-size: 12px;
-      opacity: 0.5;
-    }
-
-    .back-link {
-      margin-top: 28px;
-      display: inline-block;
-      color: #3b82f6;
-      text-decoration: none;
-    }
-
-    .back-link:hover {
-      text-decoration: underline;
-    }
+    .muted { color:var(--muted); font-size:13px; }
   </style>
 </head>
 
 <body>
 
 <header>
-  <!-- ✅ Using same GitHub-hosted US Signal logo source as licenses page -->
-  <img src="https://raw.githubusercontent.com/ahmedadeyemi-cts/ussignal-webex/main/ui/logo.svg" alt="US Signal Logo">
-  <div>Webex Calling & Control Hub Status</div>
-</header>
-
-<div class="container">
-
-  <h1>Platform Maintenance & Incidents</h1>
-
-  <div class="card">
-
-    <div id="loading" class="loading">
-      Checking Webex Calling & Control Hub status...
+  <div class="brand">
+    <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
+    <div>
+      <h1>Webex Platform Maintenance</h1>
+      <div class="muted" id="whoLine">Loading…</div>
     </div>
-
-    <div id="emptyState" class="empty" style="display:none;">
-      No active Calling or Control Hub incidents.
-    </div>
-
-    <table id="maintenanceTable" style="display:none;">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Start</th>
-          <th>End</th>
-          <th>Type</th>
-          <th>Description</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody id="maintenanceRows"></tbody>
-    </table>
-
-    <div class="refresh-note">
-      Auto-refreshes every 60 seconds.
-    </div>
-
   </div>
 
-  <a href="/" class="back-link">← Back to Dashboard</a>
+  <div class="headerRight">
+    <div class="pill" id="tenantPill">Tenant: —</div>
+    <button class="secondary" id="btnTheme">Dark Mode</button>
+    <button class="secondary" id="btnRefresh">Refresh</button>
+  </div>
+</header>
 
+<main>
+
+<div id="majorBanner" class="major-banner">
+  ⚠️ Major Incident Impacting Webex Calling / Control Hub
 </div>
 
+<div class="card">
+  <h2>Active Incidents & Maintenance</h2>
+  <div class="muted" id="lastUpdated">Last updated: —</div>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Type</th>
+        <th>Description</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody id="rows"></tbody>
+  </table>
+</div>
+
+</main>
+
 <script>
-async function loadMaintenance() {
-  const loading = document.getElementById("loading");
-  const table = document.getElementById("maintenanceTable");
-  const rows = document.getElementById("maintenanceRows");
-  const empty = document.getElementById("emptyState");
+const $ = id => document.getElementById(id);
 
-  loading.style.display = "block";
-  table.style.display = "none";
-  empty.style.display = "none";
-  rows.innerHTML = "";
+/* Theme identical to licenses */
+function loadTheme(){
+  const saved = localStorage.getItem("uiTheme");
+  const theme = saved === "dark" ? "dark" : "light";
+  document.documentElement.setAttribute("data-theme", theme);
+  $("btnTheme").textContent = theme === "dark" ? "Light Mode" : "Dark Mode";
+}
+function toggleTheme(){
+  const cur = document.documentElement.getAttribute("data-theme");
+  const next = cur === "dark" ? "light" : "dark";
+  localStorage.setItem("uiTheme", next);
+  loadTheme();
+}
+$("btnTheme").onclick = toggleTheme;
+loadTheme();
 
-  try {
-    const res = await fetch("/api/maintenance");
-    const data = await res.json();
+async function api(path){
+  const r = await fetch(path);
+  return r.json();
+}
 
-    if (!res.ok) {
-      loading.textContent = "Failed to load Webex maintenance data.";
-      return;
-    }
-
-    const incidents = data.incidents || [];
-    const maintenance = data.maintenance || [];
-
-    if (!incidents.length && !maintenance.length) {
-      loading.style.display = "none";
-      empty.style.display = "block";
-      return;
-    }
-
-    const allRows = [];
-
-    incidents.forEach(i => {
-      allRows.push(`
-        <tr>
-          <td>${new Date(i.updated_at).toLocaleDateString()}</td>
-          <td>—</td>
-          <td>—</td>
-          <td>Incident</td>
-          <td>${i.name}</td>
-          <td class="${statusClass(i.status)}">${i.status}</td>
-        </tr>
-      `);
-    });
-
-    maintenance.forEach(m => {
-      allRows.push(`
-        <tr>
-          <td>${new Date(m.start).toLocaleDateString()}</td>
-          <td>${new Date(m.start).toLocaleTimeString()}</td>
-          <td>${new Date(m.end).toLocaleTimeString()}</td>
-          <td>Maintenance</td>
-          <td>${m.name}</td>
-          <td class="${statusClass(m.status)}">${m.status}</td>
-        </tr>
-      `);
-    });
-
-    rows.innerHTML = allRows.join("");
-    loading.style.display = "none";
-    table.style.display = "table";
-
-  } catch (err) {
-    loading.textContent = "Unexpected error loading status.";
+async function loadMe(){
+  const r = await fetch("/api/me");
+  const data = await r.json();
+  if (!data.orgId && data.role !== "admin"){
+    window.location.href = "/pin";
+    return false;
   }
+  $("whoLine").textContent = `${data.email} (${data.role})`;
+  $("tenantPill").textContent = `Tenant: ${data.orgName || "—"}`;
+  return true;
 }
 
-function statusClass(status) {
-  if (!status) return "";
+async function loadMaintenance(){
+  const data = await api("/api/maintenance");
+  $("lastUpdated").textContent = "Last updated: " + new Date().toLocaleString();
 
-  const s = status.toLowerCase();
+  const rows = [];
+  let hasMajor = false;
 
-  if (s.includes("operational")) return "status-operational";
-  if (s.includes("degraded")) return "status-degraded";
-  if (s.includes("major")) return "status-major";
+  (data.incidents || []).forEach(i=>{
+    if (i.impact === "major") hasMajor = true;
 
-  return "";
+    rows.push(`
+      <tr>
+        <td>${new Date(i.updated_at).toLocaleDateString()}</td>
+        <td><span class="badge badge-incident">Incident</span></td>
+        <td>${i.name} ${i.name.toLowerCase().includes("pstn") ? '<span class="badge badge-pstn">PSTN</span>' : ''}</td>
+        <td>${i.status}</td>
+      </tr>
+    `);
+  });
+
+  (data.maintenance || []).forEach(m=>{
+    rows.push(`
+      <tr>
+        <td>${new Date(m.start).toLocaleDateString()}</td>
+        <td><span class="badge badge-maint">Maintenance</span></td>
+        <td>${m.name}</td>
+        <td>${m.status}</td>
+      </tr>
+    `);
+  });
+
+  $("rows").innerHTML = rows.length ? rows.join("") :
+    `<tr><td colspan="4" class="muted">No calling or Control Hub incidents.</td></tr>`;
+
+  if (hasMajor) $("majorBanner").style.display = "block";
 }
 
-loadMaintenance();
-setInterval(loadMaintenance, 60000);
+$("btnRefresh").onclick = loadMaintenance;
+
+async function init(){
+  const ok = await loadMe();
+  if (!ok) return;
+  await loadMaintenance();
+}
+init();
 </script>
 
 </body>
